<resources>
    <string name="app_name">诗言</string>
    <string name="directory">Directory</string>
    <string name="item">Item</string>
    <string name="back">Back</string>
    <string name="select">Select</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="writing">Writing</string>
    <string name="type_name">Type name</string>
    <string name="type_date">Type date</string>
    <string name="type_author">Type author</string>
    <string name="type_content">Type content</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="caution">Caution!</string>
    <string name="sure">Are you sure to delete?</string>
    <string name="refresh">Refresh</string>
    <!--login-->
    <string name="account" translatable="false">用户名</string>
    <string name="password" translatable="false">密码</string>
    <string name="login" translatable="false">登录</string>
    <string name="register" translatable="false">注册</string>
</resources>
