<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/WhiteSmoke"
            android:orientation="horizontal">

            <Button
                android:id="@+id/left_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/color_1_background"
                android:textAllCaps="false"
                android:textColor="@color/color_1" />

            <TextView
                android:id="@+id/center_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:textSize="23sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/right_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/color_1_background"
                android:textAllCaps="false"
                android:textColor="@color/color_1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="0dip"
            android:layout_marginBottom="0dip"
            android:background="@color/WhiteSmoke" />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/type_name"
        android:maxLength="20"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/type_date"
        android:maxLength="20"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/type_author"
        android:maxLength="13"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@color/colorDarkGray"
        android:gravity="center"
        android:hint="@string/type_content"
        android:scrollbars="vertical"
        android:textSize="23sp" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1" />

</LinearLayout>