<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_columnWeight="4">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/inputbox"
        android:layout_width="300dp"
        android:layout_height="140dp"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/ink_account"
            android:hint="@string/account"
            android:paddingLeft="8dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />
        <!--style="@style/ipt_account"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignBottom="@+id/inputbox"
            android:layout_weight="1"
            android:background="@drawable/ink_account"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:background="@drawable/ink_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="8dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />

            <ImageView
                android:id="@+id/eye_check"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/ic_eye" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_below="@+id/inputbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/ink_btn_login"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/register_box"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_below="@+id/btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_remember_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:buttonTint="@color/nav_black"
            android:text="记住密码"
            android:textColor="@color/nav_black" />


        <TextView
            android:id="@+id/forget_pass"
            style="@style/login_tex"
            android:text="忘记密码"
            android:textColor="@color/nav_black" />


        <TextView
            android:id="@+id/register"
            style="@style/login_tex"
            android:text="@string/register"
            android:textColor="@color/nav_black" />
    </LinearLayout>


</RelativeLayout>